{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 765,
  "lineage": "303eed16-9ea4-29cc-5aad-555959d56e37",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068257025f72f470d",
            "arn": "arn:aws:ec2:ap-south-1:091491814818:instance/i-0afc0dee4792972c3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0afc0dee4792972c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbai_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04d24275a66618fd6",
            "private_dns": "ip-10-0-0-162.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.162",
            "public_ip": "13.234.231.96",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f074445190db4fb9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cda653380736ae4e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-048d1c8731039f903",
            "tags": {
              "Name": "dev-ec2"
            },
            "tags_all": {
              "Name": "dev-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cda653380736ae4e"
            ]
          },
          "dependencies": [
            "module.ec2.data.template_file.nginx",
            "module.ec2.data.template_file.phpconfig",
            "module.nw.aws_subnet.dev-pub-snet",
            "module.nw.aws_vpc.dev-vpc",
            "module.sg.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-igw",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:internet-gateway/igw-07d63f33d19431d34",
            "id": "igw-07d63f33d19431d34",
            "owner_id": "091491814818",
            "tags": {
              "Name": "default_igw"
            },
            "tags_all": {
              "Name": "default_igw"
            },
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "dependencies": [
            "module.nw.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-rt",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:route-table/rtb-063429cbbfb97442d",
            "id": "rtb-063429cbbfb97442d",
            "owner_id": "091491814818",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d63f33d19431d34",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default_rt"
            },
            "tags_all": {
              "Name": "default_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_internet_gateway.dev-igw",
            "module.nw.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-rta",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03eadfa9d39cea7e0",
            "route_table_id": "rtb-063429cbbfb97442d",
            "subnet_id": "subnet-048d1c8731039f903"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.dev-igw",
            "module.nw.aws_route_table.dev-rt",
            "module.nw.aws_subnet.dev-pub-snet",
            "module.nw.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "pub_sub-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f06dc4c9534f6c0a",
            "route_table_id": "rtb-063429cbbfb97442d",
            "subnet_id": "subnet-04c66cfa43f8d08f6"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.dev-igw",
            "module.nw.aws_route_table.dev-rt",
            "module.nw.aws_subnet.dev-pub-snet",
            "module.nw.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub-snet",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-048d1c8731039f903",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048d1c8731039f903",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "dependencies": [
            "module.nw.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "pub_sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-04c66cfa43f8d08f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c66cfa43f8d08f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "dependencies": [
            "module.nw.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pvt-snet",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pvt_sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-07dd9dbc516096577",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dd9dbc516096577",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "dependencies": [
            "module.nw.aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": "pvt_sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:subnet/subnet-0e916ac6cceb2ac3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e916ac6cceb2ac3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091491814818",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "dependencies": [
            "module.nw.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "module.nw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:vpc/vpc-07e911ce56e6359a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-00c41448a61f650ca",
            "default_route_table_id": "rtb-04d9c37f3155d325c",
            "default_security_group_id": "sg-0af92ed61c348b9e3",
            "dhcp_options_id": "dopt-0712b866782dfabd1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07e911ce56e6359a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d9c37f3155d325c",
            "owner_id": "091491814818",
            "tags": {
              "Name": "default_vpc",
              "env": "dev"
            },
            "tags_all": {
              "Name": "default_vpc",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:security-group/sg-0cda653380736ae4e",
            "description": "all incoming",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cda653380736ae4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2",
            "name_prefix": "",
            "owner_id": "091491814818",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rds-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:091491814818:security-group/sg-0dad3154c427c68bf",
            "description": "rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dad3154c427c68bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "091491814818",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e911ce56e6359a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.dev-vpc",
            "module.sg.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}